--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -43,3 +43,5 @@ $text-light: #EEE;
 $bs-light: 0 0 4px 1px #CCC;
 $bs-med: 0 1px 3px 1px rgba(76, 76, 76, 0.26);
 $bs-hover: 0 2px 2px 1px rgba(0,0,0,.13);
+
+$anim-material: cubic-bezier(0.25, 0.46, 0.45, 0.94);
