--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -24,8 +24,14 @@ $-xs: 6px;
 $-xxs: 3px;
 
 // Fonts
-$heading:  'Roboto', Helvetica, Arial, sans-serif;
-$text: 'Roboto', Helvetica, Arial, sans-serif;
+$heading: -apple-system, BlinkMacSystemFont,
+    “Segoe UI”, “Roboto”, “Oxygen”,
+    “Ubuntu”, “Cantarell”, “Fira Sans”,
+    “Droid Sans”, “Helvetica Neue”, sans-serif;
+$text:-apple-system, BlinkMacSystemFont,
+    “Segoe UI”, “Roboto”, “Oxygen”,
+    “Ubuntu”, “Cantarell”, “Fira Sans”,
+    “Droid Sans”, “Helvetica Neue”, sans-serif;
 $fs-m: 16px;
 $fs-s: 14px;
 
