--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,8 @@
 /**
- * Variabls
+ * Variables
  */
 
 :root {
-	--space-m: 24px;
 }
 
 /**
@@ -57,15 +56,40 @@ html {
 	height: 100%;
 }
 body {
-	display: grid;
-	grid-template-columns: 1fr 3fr;
+	display: flex;
 	height: 100%;
+	overflow: hidden;
 }
 body > section {
-	padding: var(--space-m);
+	height: 100%;
+	overflow-y: scroll;
+	flex: 1;
+	box-shadow: 0 0 24px 0 rgba(0, 0, 0, .3);
 }
 body > aside {
+	flex-basis: 10vw;
 	background: #EEE;
+	overflow: hidden;
+}
+.content-wrap {
+	padding: 3rem 4rem;
+}
+
+@media (max-width: 400px) {
+	body {
+		flex-direction: column;
+		overflow: initial;
+		height: auto;
+	}
+	body > aside {
+		flex-basis: 20vw;
+	}
+	body > section {
+		overflow: initial;
+	}
+	.content-wrap {
+		padding: 2rem;
+	}
 }
 
 
@@ -73,6 +97,7 @@ body > aside {
  * Core text styles
  */
 body {
+	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
 	color: #000;
 	line-height: 1.4;
@@ -86,21 +111,111 @@ p {
 	margin-bottom: .5em;
 }
 
+h1 {
+	font-size: 3rem;
+	font-weight: 700;
+}
+
+h2 {
+	font-size: 1rem;
+	font-weight: 700;
+	text-transform: uppercase;
+	color: #555;
+	margin-top: 3rem;
+	margin-bottom: 1rem;
+}
+
+h3 {
+	font-size: 1.5rem;
+}
+
+a {
+	color: #297f37;
+}
+
+
+/**
+ * Header
+ */
+.logo {
+	margin-bottom: .4rem;
+}
+.social li {
+	display: inline-block;
+	margin-right: 1rem;
+}
+.social a {
+	color: #137092;
+}
+
 /**
  * Projects
  */
 .project-container {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	grid-row-gap: var(--space-m);
-	grid-column-gap: var(--space-m);
+	display: flex;
+	flex-wrap: wrap;
+	margin: 0 -1rem;
+	align-items: stretch;
+	justify-content: flex-start;
+	transform: s
 }
 
 .project {
-	flex-basis: 400px;
+	flex: 1;
+	flex-grow: 0;
+	flex-basis: 200px;
 	border: 1px solid #DDD;
-	padding: var(--space-m);
-
+	border-radius: 8px;
+	padding: 2rem;
+	display: flex;
+	flex-direction: column;
 	text-decoration: none;
 	color: #000;
+	margin: 0 1rem 2rem 1rem;
+	transform: translateY(0);
+	transition: all ease-in-out 240ms;
+}
+.project:hover {
+	transform: translateY(-3px);
+	box-shadow: 0 4px 6px rgba(0, 0, 0, .07), 0 5px 15px rgba(0, 0, 0, .01);
+}
+.project .tech {
+	margin-top: auto;
+	margin-bottom: 0;
+	margin-bottom: -.75rem;
+}
+.project .summary {
+	margin-bottom: 1.5rem;
+}
+.tech span {
+	display: inline-block;
+	position: relative;
+	overflow: hidden;
+	font-size: .9rem;
+	margin-right: 1rem;
+	margin-bottom: .75rem;
+	color: #137092;
+	border-radius: .5rem;
+	padding: 6px 12px;
+	line-height: 1;
+}
+.tech span::after {
+	display: block;
+	position: absolute;
+	content: '';
+	left: 0;
+	top: 0;
+	height: 100%;
+	width: 100%;
+	opacity: 0.15;
+	background-color: currentColor;
+}
+.tech span:nth-child(4n-2) {
+	color: #297f37;	
+}
+.tech span:nth-child(4n-1) {
+	color: #871b1b;	
+}
+.tech span:nth-child(4n) {
+	color: #4c3ec4;	
 }
