--- a/src/styles.css
+++ b/src/styles.css
@@ -219,3 +219,28 @@ a {
 .tech span:nth-child(4n) {
 	color: #4c3ec4;	
 }
+
+/**
+ * Fonts
+ */
+/* roboto-regular - latin */
+@font-face {
+	font-family: 'Roboto';
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: local(''),
+	url('./fonts/roboto-v27-latin-regular.woff2') format('woff2'),
+	url('./fonts/roboto-v27-latin-regular.woff') format('woff');
+}
+
+/* roboto-700 - latin */
+@font-face {
+	font-family: 'Roboto';
+	font-style: normal;
+	font-weight: 700;
+	font-display: swap;
+	src: local(''),
+	url('./fonts/roboto-v27-latin-700.woff2') format('woff2'),
+	url('./fonts/roboto-v27-latin-700.woff') format('woff');
+}
