--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,15 @@
 html, body {
 	font-family: 'genericmedium', serif;
 	font-size: 16px;
-	background: #14b3ab;
+}
+body {
+	padding: 1rem;
+	background-color: #14b3ab;
+	background-image: url('../images/bg.png');
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
+	image-rendering: pixelated;
 }
 
 .bezel-out {
@@ -32,6 +40,7 @@ html, body {
 	background-color: #BBB;
 	padding: 2px;
 	border: 2px double #000;
+	margin-bottom: 2rem;
 }
 
 .window-titlebar {
@@ -75,6 +84,7 @@ html, body {
 }
 
 .window-panel {
+	position: relative;
 	border-top: 2px solid #666;
 	border-left: 2px solid #666;
 	border-bottom: 2px solid #DDD;
@@ -88,6 +98,28 @@ html, body {
 	padding: 1rem;
 }
 
+.window-panel-title {
+	position: absolute;
+	left: 1rem;
+	top: 0;
+	margin: 0;
+	font-size: 1.3rem;
+	margin-top: -.7rem;
+	background-color: #BBB;
+	padding: 0 .5rem;
+}
+
+.window-panel-list .window-panel {
+	margin: 2rem 0;
+}
+
+.window-panel-split-content {
+	display: flex;
+	gap: 1rem;
+	justify-content: space-between;
+	align-items: center;
+}
+
 .window img {
 	width: 250px;
 	height: auto;
@@ -98,6 +130,13 @@ html, body {
 	display: flex;
 	flex-direction: row;
 	gap: 1rem;
+	flex-wrap: wrap;
+}
+.window-flex > *{
+	min-width: 200px;
+}
+.window-flex > .dynamic {
+	flex: 1;
 }
 
 .padded {
@@ -147,4 +186,110 @@ p, li, h2 {
 	/* text-shadow: .5px .5px #D5D5D5;
 	transform: scaleY(1.06); */
 	line-height: 1.3;
+}
+
+.monospace {
+	font-family: monospace;
+}
+
+.button {
+    border-top: 2px solid #EEE;
+    border-left: 2px solid #EEE;
+    border-bottom: 2px solid #444;
+    border-right: 2px solid #444;
+    padding: .5rem 1rem;
+    font-weight: bold;
+    text-decoration: none;
+    box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5);
+    color: #000;
+    display: inline-flex;
+    align-items: center;
+    gap: .5rem;
+}
+.button:hover {
+    background: rgba(255, 255, 255, 0.2);
+}
+.button:active:hover {
+    background: rgba(0, 0, 0, 0.1);
+    border-top-color: #444;
+    border-left-color: #444;
+    border-bottom-color: #EEE;
+    border-right-color: #EEE;
+}
+.button:active {
+	outline: 2px dotted #222;
+	outline-offset: -.5rem;
+}
+.button svg {
+    width: 16px;
+    fill: currentColor;
+}
+.button-group {
+    display: flex;
+    gap: 1rem;
+	flex-wrap: wrap;
+}
+.button-group.center {
+	padding: 0 1rem;
+    justify-content: space-around;
+}
+.button-group.right {
+	justify-content: end;
+}
+
+.table-panel {
+	background: #FFF;
+	border-top: 2px solid #666;
+	border-left: 2px solid #666;
+	border-bottom: 2px solid #DDD;
+	border-right: 2px solid #DDD;
+}
+.table-panel table {
+	border-top: 2px solid #DDD;
+	border-left: 2px solid #DDD;
+	border-bottom: 2px solid #999;
+	border-right: 2px solid #999;
+	width: 100%;
+	border-spacing: 0;
+}
+.table-panel th {
+	background-color: #CCC;
+	border-top: 2px solid #DDD;
+	border-left: 2px solid #DDD;
+	border-bottom: 2px solid #666;
+	border-right: 2px solid #666;
+}
+.table-panel td {
+	padding: .2rem .5rem;
+}
+.table-panel td.monospace {
+	font-size: .8rem;
+	text-align: right;
+}
+.table-panel tr:hover {
+	outline: 2px dotted #666;
+	outline-offset: -3px;
+}
+.table-panel a:hover {
+	color: blue;
+}
+.table-panel h2 {
+	margin: 0;
+	font-size: 1rem;
+}
+
+.detail-list {
+	margin-bottom: .5rem;
+	display: flex;
+	gap: 1rem;
+	flex-wrap: wrap;
+}
+.detail {
+	color: #222;
+}
+.detail::before {
+	content: ' // ';
+}
+.detail:first-child::before {
+	content: '';
 }
