--- a/src/styles.css
+++ b/src/styles.css
@@ -12,14 +12,16 @@ html, body {
 	font-family: 'genericmedium', serif;
 	font-size: 16px;
 }
-body {
-	padding: 1rem;
+html {
 	background-color: #14b3ab;
 	background-image: url('../images/bg.png');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
 	image-rendering: pixelated;
+}
+body {
+	padding: 1rem;
 }
 
 .bezel-out {
@@ -32,6 +34,7 @@ body {
 .bezel-in-thin-hard {
 	border-top: 3px solid #000;
 	border-left: 3px solid #000;
+	overflow: hidden;
 }
 
 .window {
@@ -118,12 +121,14 @@ body {
 	gap: 1rem;
 	justify-content: space-between;
 	align-items: center;
+	flex-wrap: wrap;
 }
 
 .window img {
 	width: 250px;
 	height: auto;
 	display: block;
+	max-width: 100%;
 }
 
 .window-flex {
